@@ -1762,9 +1762,20 @@
                 {
                     "caption": "Username field",
                     "name": "fb_username_field",
-                    "description": "Name of the form field that will receive the username. You can use the label name of the CB field here, or the input name in the HTML.",
+                    "description": "Name of the form field that will receive the username. You can use the label name of the CB field here, or the input name in the HTML. Tip: consider using the email address here..",
                     "category": "Registration",
                     "sortOrder": "10",
+                    "type": "text",
+                    "templates": [
+                        "fbRegister"
+                    ]
+                },
+                {
+                    "caption": "Fullname field",
+                    "name": "fb_fullname_field",
+                    "description": "Name of the form field that will receive the full name of the user. Handy when using email address as username. You can use the label name of the CB field here, or the input name in the HTML.",
+                    "category": "Registration",
+                    "sortOrder": "11",
                     "type": "text",
                     "templates": [
                         "fbRegister"
@@ -1775,7 +1786,7 @@
                     "name": "fb_password_field",
                     "description": "Name of the form field that will receive a password. If empty, a password will be generated instead. You can use the label name of the CB field here, or the input name in the HTML.",
                     "category": "Registration",
-                    "sortOrder": "11",
+                    "sortOrder": "12",
                     "type": "text",
                     "templates": [
                         "fbRegister"
