@@ -7,6 +7,7 @@ Fixes and improvements:
 - Prevent MIGXdb fields with default value of NULL from being set to 0
 - Fix binary download types (such as PDFs) not having content
 - Fix Global Backgrounds TV not loading its MIGX config from file
+- Add fullname parameter to Registration template
 
 ## Romanesco Patterns 0.14.1
 Released on February 10, 2019
